# Cryptography-Exploration

./: README.md  RSA_KeyGeneration_DurationsData.csv  RSA_KeyGeneration_DurationsDataLocal.csv  RSA_KeyGeneration_DurationsData_C++.csv
BadActorMethodologies/: BruteForceVsCaesarCypher.py  BruteForceVsMultiplicativeCypher.py  ShorsAlgorithmVsRSA.py
C++_Implementations/: CMakeLists.txt  README.md
C++_Implementations/AES/: CMakeLists.txt
C++_Implementations/AES/include/: AES.hpp  AESConstants.hpp  AESDataBlock.hpp  AESKey.hpp  AESState.hpp  AESWord.hpp
C++_Implementations/AES/include/Modes/: AES_CBC.hpp  AES_CFB.hpp  AES_CTR.hpp  AES_ECB.hpp  AES_GCM.hpp  AES_OFB.hpp  GCMBlock.hpp
C++_Implementations/AES/src/: AES.cpp  AESConstants.cpp  AESDataBlock.cpp  AESKey.cpp  AESState.cpp  AESWord.cpp  main.cpp
C++_Implementations/AES/src/Modes/: AES_CBC.cpp  AES_CFB.cpp  AES_CTR.cpp  AES_ECB.cpp  AES_GCM.cpp  AES_OFB.cpp  GCMBlock.cpp
C++_Implementations/EllipticCurveCryptography/: CMakeLists.txt
C++_Implementations/EllipticCurveCryptography/include/: ECDSA.hpp  EdDSA.hpp  EdwardsCurve.hpp  EllipticCurve.hpp  Point.hpp
C++_Implementations/EllipticCurveCryptography/src/: ECDSA.cpp  EdDSA.cpp  EdwardsCurve.cpp  EllipticCurve.cpp  Point.cpp  WeirrstrassCurve.cpp  main.cpp
C++_Implementations/HashingAlgorithms/: CMakeLists.txt
C++_Implementations/HashingAlgorithms/include/: CreateHashDigest.hpp  SHA.hpp  SHA1.hpp  SHA2.hpp  SHA3.hpp  SHA_32bit.hpp  SHA_64bit.hpp
C++_Implementations/HashingAlgorithms/src/: CreateHashDigest.cpp  SHA1.cpp  SHA224.cpp  SHA256.cpp  SHA3.cpp  SHA384.cpp  SHA3_224.cpp  SHA3_256.cpp  SHA3_384.cpp  SHA3_512.cpp  SHA3_State.cpp  SHA512.cpp  SHA512_224.cpp  SHA512_256.cpp  SHAKE128.cpp  SHAKE256.cpp  SHA_32bit.cpp  SHA_64bit.cpp  main.cpp
C++_Implementations/HelperFunctions/: CMakeLists.txt
C++_Implementations/HelperFunctions/include/: BigNumHelpers.hpp  IOHelpers.hpp
C++_Implementations/HelperFunctions/src/: BigNumGCDMin1.cpp  BigNumHandler.cpp  BigNumHash.cpp  BigNumPrimalityTests.cpp  BigNumPrimeSieve.cpp  BigNumRandBits.cpp  BigNumToLongLong.cpp  BigNumXOR.cpp  CSVWriter.cpp
C++_Implementations/QT_GUI_Cryptography/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  style.qss
C++_Implementations/QT_GUI_Cryptography/include/: mainwindow.h
C++_Implementations/QT_GUI_Cryptography/resources/: mainwindow.ui  resources.qrc  style.qss
C++_Implementations/QT_GUI_Cryptography/src/: main.cpp  mainwindow.cpp
C++_Implementations/RSA/: CMakeLists.txt
C++_Implementations/RSA/include/: RSADurationTracking.hpp  RSAKeyGeneration.hpp  RSAPrivateKey.hpp  RSAPublicKey.hpp
C++_Implementations/RSA/src/: RSADurationTracking.cpp  RSAKeyGeneration.cpp  RSAKeyGenerationProbablePrimes.cpp  RSAKeyGenerationProvablePrimes.cpp  RSAKeyGenerationResultStructures.cpp  RSAKeyGenerationShaweTaylorRandomPrime.cpp  RSAPrivateKey.cpp  RSAPublicKey.cpp  main.cpp
C++_Implementations/Tests/: CMakeLists.txt
C++_Implementations/Tests/AESTests/: CMakeLists.txt
C++_Implementations/Tests/AESTests/src/: AESCypherTests.cpp  AESDataBlockTests.cpp  AESKeyExpansionTests.cpp  AESStateTests.cpp
C++_Implementations/Tests/AESTests/src/ModesTests/: AES_CBCTests.cpp  AES_CFBTests.cpp  AES_CTRTests.cpp  AES_ECBTests.cpp  AES_GCMTests.cpp  AES_OFBTests.cpp  GCMBlockTests.cpp
C++_Implementations/Tests/BigNumHelpersTests/: CMakeLists.txt
C++_Implementations/Tests/BigNumHelpersTests/src/: BigNumHashTests.cpp  BigNumPrimeSieveTests.cpp  BigNumXorTests.cpp
C++_Implementations/Tests/ECCTests/: CMakeLists.txt
C++_Implementations/Tests/ECCTests/src/: ECDSATests.cpp  PointTests.cpp  WeirrstrassCurveTests.cpp
C++_Implementations/Tests/HashingTests/: CMakeLists.txt
C++_Implementations/Tests/HashingTests/src/: SHA1_tests.cpp  SHA224_tests.cpp  SHA256_tests.cpp  SHA384_tests.cpp  SHA3Methods_tests.cpp  SHA3_224_tests.cpp  SHA3_tests.cpp  SHA512_224_tests.cpp  SHA512_256_tests.cpp  SHA512_tests.cpp
C++_Implementations/Tests/RSATests/: CMakeLists.txt
C++_Implementations/Tests/RSATests/src/: EncryptionPrimitiveTests.cpp  KeyGenTests_ProbablyPrime.cpp  KeyGenTests_ProbablyPrimeProbAux.cpp  KeyGenTests_ProbablyPrimeProvAux.cpp  KeyGenTests_ProvablyPrime.cpp  KeyGenTests_ProvablyPrimeProvAux.cpp  KeyGenerationTests.cpp
CryptographySchemes/: AdvancedEncryptionStandard.py  CaesarCypher.py  DataEncryptionStandard.py  DiffieHellmanKeyExchange.py  EdwardsCurveDigitalSignatureAlgorithm.py  EllipticCurveDHKeyExchange.py  EllipticCurveDigitalSignatureAlgorithm.py  KeyedHashMessageAuthenticationCode.py  MultiplicativeCypher.py  RSACryptographyScheme.py  RSA_KeyGeneration.py  SecureHashAlgorithm1.py  SecureHashAlgorithm2.py  SecureHashAlgorithm3.py  SecurityStrength.py  TripleDataEncryptionStandard.py
CryptographySchemes/HashingAlgorithms/: ApprovedHashFunctions.py  SecureHashAlgorithm1.py  SecureHashAlgorithm2.py  SecureHashAlgorithm3.py
CryptographySchemes/HistoricalCyphers/: CaesarCypher.py  MultiplicativeCypher.py
CryptographySchemes/MessageAuthenticationCodes/: CMAC.py  KeyedHashMessageAuthenticationCode.py
CryptographySchemes/OutputImages/: AES_Examples.py  AES_GCM_Examples.py  AES_Modes_Examples.py  CMAC_Examples.py  ECDSA_Examples.py  EdDSA_Examples.py  HMAC_Examples.py  RSA_KeyGeneration_DurationGraphs.py  SHA1_SHA2_Examples.py  SHA3_Examples.py  TDES_Modes_Examples.py
CryptographySchemes/RSA/: RSA_Keys.py  RSA_Primitives.py  RSA_SimpleEncryptionScheme.py
GeneratingDiagrams/: BasicSequenceDiagramSetup.py  CaesarCypherSequenceDiagram.py  DiffieHellmanKeyExchangeSequenceDiagram.py  MultiplicativeCypherSequenceDiagram.py  RSACryptographySchemeSequenceDiagram.py
HelperFunctions/: EllipticCurveCalculations.py  EllipticCurveCalculations_UnitTests.py  EllipticCurveDetails.py  EncodeStringAsNumberList.py  EncodeStringAsNumberList_UnitTests.py  EuclidsAlgorithms.py  EuclidsAlgorithms_UnitTests.py  FunctionTimeComparisons.py  IntegerHandler.py  IntegerHandler_UnitTests.py  NumberFormatting.py  PrimeNumbers.py  PrimeNumbers_UnitTests.py
(+32 files in other folders)
